<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_screen">
    <FrameLayout
        android:id="@+id/frame_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_toolbar">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_Done"
                app:layout_constraintStart_toEndOf="@id/image_close"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/text_Done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="18dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:alpha="0.5"
        android:src="@drawable/ic_andy_rubin"
        app:layout_constraintTop_toBottomOf="@id/frame_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/image_camera"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_cameraa"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/image_profile"/>
    <TextView
        android:id="@+id/text_uploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_upload_image"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:textColor="@color/white_text_opacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"/>
    <TextView
        android:id="@+id/text_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="12sp"
        android:layout_marginStart="28dp"
        android:padding="4dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/orange_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_uploadImage"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edit_text_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_here"
        android:textColorHint="@color/white_item_opacity"
        android:textSize="16sp"
        android:layout_marginStart="31dp"
        android:padding="8dp"
        android:paddingStart="0dp"
        android:textColor="@color/white"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_fullname"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:background="@color/white_view_opacity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_fullname"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="12sp"
        android:layout_marginStart="28dp"
        android:padding="4dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/orange_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email here"
        android:textColorHint="@color/white_item_opacity"
        android:textSize="16sp"
        android:layout_marginStart="31dp"
        android:padding="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:background="@color/white_view_opacity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/textphoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="12sp"
        android:layout_marginStart="28dp"
        android:padding="4dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/orange_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edit_text_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_here"
        android:textColorHint="@color/white_item_opacity"
        android:textSize="16sp"
        android:layout_marginStart="31dp"
        android:padding="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textphoneNumber"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:background="@color/white_view_opacity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_phoneNumber"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>