<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_screen"
    tools:context=".activity.CreateLimitedUserActivity">
    <FrameLayout
        android:id="@+id/frame_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_toolbar">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="Create Limited User"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_close"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/text_fullname_limited_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname_of_limited_user"
        android:textSize="12sp"
        android:layout_marginTop="80dp"
        android:padding="4dp"
        android:paddingStart="50dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/white_text_opacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_header"/>
    <EditText
        android:id="@+id/edit_text_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:textColorHint="@color/white_text_opacity"
        android:background="@drawable/bg_edittext_createlimited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_fullname_limited_user"/>

    <Button
        android:id="@+id/button_generate_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_code"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_button"
        android:textSize="@dimen/button_textSize"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>